# tiledarray

cmake/modules/: FindCOREBLAS.cmake  FindDPLASMA.cmake  FindHWLOC.cmake  FindPARSEC.cmake
examples/dgemm/: CMakeLists.txt  irregular_tiled_matrix_wrapper.cpp  irregular_tiled_matrix_wrapper.h  parsec_summa_wrapper.h  parsec_wrapper.h  ta_cc_abcd.cpp
